k8s/namespace.yaml
# `apiVersion` batata hai ki yeh object Kubernetes core v1 API use karega.
apiVersion: v1
# `kind` se define hota hai ki hum Namespace resource bana rahe hain.
kind: Namespace
# `metadata` object resource ki basic identity/config rakhta hai.
metadata:
  # `name` namespace ka unique naam hai jisme app ke resources isolate honge.
  name: bankapp
