k8s/bankApp-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp-deployment
  namespace: bankapp
  labels:
    app: bankapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
      - name: bankapp
        image: praveen416/ai-bankapp:k8s
        ports:
        - containerPort: 8080
