k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql-deployment
  namespace: bankapp
  labels:
    app: mysql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
